--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -1,14 +1,22 @@
+.tasklist ul{
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    border-radius: 5px;
+}
+
+.tasklist .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 10px;
+    margin-bottom: 30px;
+}
+
 .tasklist h1{
     font-size: 28px;
     text-align: center;
-    margin: 20px;
-}
-
-.tasklist ul{
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 .tasklist button.trigger{
@@ -18,4 +26,5 @@
     color: #FFFFFF;
     padding: 5px 10px;
     cursor: pointer;
+    font-size: 16px;
 }
